<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_50ssp"
        android:textStyle="bold"
        android:fontFamily="@font/intro"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_195sdp"
        android:layout_marginTop="@dimen/_75sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_62sdp"
            android:text="@string/text3"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_14ssp"
            />

        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/editviewid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_61sdp"
            android:layout_marginRight="@dimen/_70sdp"
            android:hint="@string/hint1"
            android:textColorHint="#DADADA"
            android:backgroundTint="#7ED957"
            />


        <ImageButton
            android:id="@+id/btnid"
            android:layout_width="@dimen/_73sdp"
            android:layout_height="@dimen/_73sdp"
            android:layout_gravity="center"
            android:backgroundTint="#00000000"
            android:src="@drawable/next"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"

            />

        <TextView
            android:id="@+id/textid"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textColor="#7ED957"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

</LinearLayout>